Fixing alignment for RTL page

--- a/service_info/static/less/base/header/nav.less
+++ b/service_info/static/less/base/header/nav.less
@@ -50,6 +50,7 @@
     .overlay {
       height: 48px;
       position: absolute;
+      left: 0;
       z-index: 2;
       width: 190px;
       .flex-layout();
